kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogger-ingress
  namespace: blogger
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://auth-service.blogger.svc.cluster.local:3001/auth/api/v1/tokens/exchange
    nginx.ingress.kubernetes.io/auth-response-headers: authorization
    nginx.ingress.kubernetes.io/auth-method: POST
    nginx.ingress.kubernetes.io/auth-snippet: |
      if ( $request_uri = "/users/api/docs" ) {
        return 200;
      }

      if ( $request_uri = "/users/api/v1/login" ) {
        return 200;
      }

      if ( $request_uri ~ "/openapi.json" ) {
        return 200;
      }
spec:
  rules:
    - host: blogger.info
      http:
        paths:
          - path: /users/
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3002
